feat: creates draft sync module
